tests/snapshots/dot_export__producer_consumer_dot.snap
---
source: tests/dot_export.rs
expression: dot
---
digraph "producer_consumer" {
  rankdir=TB;
  node [fontname="Courier", fontsize=10];
  edge [fontname="Courier", fontsize=9];

  subgraph cluster_resources {
    label="Resources";
    style=dashed;
    color=gray;

    res_mtx [label="mtx\n(Mutex)", shape=hexagon, style=filled, fillcolor="#ffe0e0"];
    res_cv [label="cv\n(Condvar)", shape=triangle, style=filled, fillcolor="#f0e0ff"];
    res_count [label="count\n(Var)", shape=rect, style=filled, fillcolor="#f0f0f0"];

    res_count -> res_mtx [style=dotted, dir=both, color=gray50];
  }

  subgraph cluster_main {
    label="main (normal)";
    style=rounded;
    color=black;

    main_s1 [label="s1: scope(producer, consumer)", shape=doubleoctagon, style="filled", fillcolor="#f0f0f0", color=black, penwidth=3];
    main_s2 [label="s2: return", shape=ellipse, style="filled", fillcolor="#a0a0a0", color=black, penwidth=1];
    main_ret [label="[ret]", shape=ellipse, style=filled, fillcolor="#a0a0a0"];

    main_s1 -> main_s2;
    main_s2 -> main_ret;
  }

  subgraph cluster_producer {
    label="producer (closure)";
    style=rounded;
    color=black;

    producer_s1 [label="s1: mutex_lock(mtx)", shape=rect, style="filled", fillcolor="#f0f0f0", color=red, penwidth=3];
    producer_s2 [label="s2: write_shared(count, count + 1)", shape=rect, style="filled", fillcolor="#f0f0f0", color=orange, penwidth=2];
    producer_s3 [label="s3: condvar_notify_all(cv)", shape=rect, style="filled", fillcolor="#f0f0f0", color=purple, penwidth=2];
    producer_s4 [label="s4: mutex_unlock(mtx)", shape=rect, style="filled", fillcolor="#f0f0f0", color=green, penwidth=2];
    producer_s5 [label="s5: return", shape=ellipse, style="filled", fillcolor="#a0a0a0", color=black, penwidth=1];
    producer_ret [label="[ret]", shape=ellipse, style=filled, fillcolor="#a0a0a0"];

    producer_s1 -> producer_s2;
    producer_s2 -> producer_s3;
    producer_s3 -> producer_s4;
    producer_s4 -> producer_s5;
    producer_s5 -> producer_ret;
  }

  subgraph cluster_consumer {
    label="consumer (closure)";
    style=rounded;
    color=black;

    consumer_s1 [label="s1: mutex_lock(mtx)", shape=rect, style="filled", fillcolor="#f0f0f0", color=red, penwidth=3];
    consumer_s2 [label="s2: read_shared(count)", shape=rect, style="filled", fillcolor="#f0f0f0", color=black, penwidth=1];
    consumer_s3 [label="s3: branch", shape=diamond, style="filled", fillcolor="#ffffcc", color=black, penwidth=1];
    consumer_s4 [label="s4: condvar_wait(cv, mtx)", shape=rect, style="filled", fillcolor="#f0f0f0", color=purple, penwidth=2];
    consumer_s5 [label="s5: nop", shape=rect, style="filled", fillcolor="#f0f0f0", color=black, penwidth=1];
    consumer_s6 [label="s6: goto", shape=rect, style="filled", fillcolor="#f0f0f0", color=black, penwidth=1];
    consumer_s7 [label="s7: write_shared(count, count - 1)", shape=rect, style="filled", fillcolor="#f0f0f0", color=orange, penwidth=2];
    consumer_s8 [label="s8: mutex_unlock(mtx)", shape=rect, style="filled", fillcolor="#f0f0f0", color=green, penwidth=2];
    consumer_s9 [label="s9: return", shape=ellipse, style="filled", fillcolor="#a0a0a0", color=black, penwidth=1];
    consumer_ret [label="[ret]", shape=ellipse, style=filled, fillcolor="#a0a0a0"];

    consumer_s1 -> consumer_s2;
    consumer_s2 -> consumer_s3;
    consumer_s3 -> consumer_s7 [label="T", color=green];
    consumer_s3 -> consumer_s4 [label="F", style=dashed, color=red];
    consumer_s4 -> consumer_s5;
    consumer_s5 -> consumer_s6;
    consumer_s6 -> consumer_s2 [color=blue, penwidth=2];
    consumer_s7 -> consumer_s8;
    consumer_s8 -> consumer_s9;
    consumer_s9 -> consumer_ret;
  }

  // Cross-function edges
  main_s1 -> producer_s1 [style=dashed, color=blue, label="scope"];
  producer_ret -> main_s1 [style=dashed, color=purple, label="join"];
  main_s1 -> consumer_s1 [style=dashed, color=blue, label="scope"];
  consumer_ret -> main_s1 [style=dashed, color=purple, label="join"];

}
