tests/snapshots/dot_export__with_summary_dot.snap
---
source: tests/dot_export.rs
expression: dot
---
digraph "with_summary" {
  rankdir=TB;
  node [fontname="Courier", fontsize=10];
  edge [fontname="Courier", fontsize=9];

  subgraph cluster_resources {
    label="Resources";
    style=dashed;
    color=gray;

    res_mtx [label="mtx\n(Mutex)", shape=hexagon, style=filled, fillcolor="#ffe0e0"];
    res_counter [label="counter\n(Var)", shape=rect, style=filled, fillcolor="#f0f0f0"];
    res_threshold [label="threshold\n(Var)", shape=rect, style=filled, fillcolor="#f0f0f0"];

    res_counter -> res_mtx [style=dotted, dir=both, color=gray50];
    res_threshold -> res_mtx [style=dotted, dir=both, color=gray50];
  }

  subgraph cluster_main {
    label="main (normal)";
    style=rounded;
    color=black;

    main_s1 [label="s1: scope(worker)", shape=doubleoctagon, style="filled", fillcolor="#f0f0f0", color=black, penwidth=3];
    main_s2 [label="s2: return", shape=ellipse, style="filled", fillcolor="#a0a0a0", color=black, penwidth=1];
    main_ret [label="[ret]", shape=ellipse, style=filled, fillcolor="#a0a0a0"];

    main_s1 -> main_s2;
    main_s2 -> main_ret;
  }

  subgraph cluster_worker {
    label="worker (closure)";
    style=rounded;
    color=black;

    worker_s1 [label="s1: mutex_lock(mtx)", shape=rect, style="filled", fillcolor="#f0f0f0", color=red, penwidth=3];
    worker_s2 [label="s2: call(validate)", shape=rect, style="filled,rounded", fillcolor="#f0f0f0", color=black, penwidth=1];
    worker_s3 [label="s3: write_shared(counter, counter + 1)", shape=rect, style="filled", fillcolor="#f0f0f0", color=orange, penwidth=2];
    worker_s4 [label="s4: mutex_unlock(mtx)", shape=rect, style="filled", fillcolor="#f0f0f0", color=green, penwidth=2];
    worker_s5 [label="s5: return", shape=ellipse, style="filled", fillcolor="#a0a0a0", color=black, penwidth=1];
    worker_ret [label="[ret]", shape=ellipse, style=filled, fillcolor="#a0a0a0"];

    worker_s1 -> worker_s2;
    worker_s2 -> worker_s3;
    worker_s3 -> worker_s4;
    worker_s4 -> worker_s5;
    worker_s5 -> worker_ret;
  }

  subgraph cluster_validate {
    label="validate (normal)";
    style=rounded;
    color=black;

    validate_ret [label="[ret]", shape=ellipse, style=filled, fillcolor="#a0a0a0"];

  }

  subgraph cluster_helper_compare {
    label="helper_compare (normal)";
    style=rounded;
    color=black;

    helper_compare_ret [label="[ret]", shape=ellipse, style=filled, fillcolor="#a0a0a0"];

  }

  // Cross-function edges
  main_s1 -> worker_s1 [style=dashed, color=blue, label="scope"];
  worker_ret -> main_s1 [style=dashed, color=purple, label="join"];

}
